# LarkSync

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT_LOG.md  Dockerfile  LarkSync Vibe Coding 开发执行计划.md  LarkSync 产品开发计划书.md  LarkSync 产品需求文档.md  LarkSync.bat  LarkSync.command  LarkSync.pyw  LarkSync飞书云文档本地同步方案深度调研.md  README.md  docker-compose.yml  nginx.conf  opencode.json  package-lock.json  package.json  release-notes-preview.md
apps/backend/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/backend/src/: main.py
apps/backend/src/api/: __init__.py  auth.py  config.py  conflicts.py  drive.py  problems.py  system.py  (+3 more)
apps/backend/tests/: test_auth_api.py  test_auth_service.py  test_backend_manager.py  test_build_installer.py  test_config.py  test_config_api.py  test_conflict_resolution_runner.py  test_conflict_resolution_service.py  test_conflict_service.py  test_db.py  test_db_session.py  test_desktop_window.py  test_device.py  test_docx_content_write_service.py  test_docx_service.py  test_drive_service.py  test_export_task_service.py  test_feishu_client.py  test_file_downloader.py  test_file_hash.py  test_file_uploader.py  test_file_writer.py  test_import_task_service.py  test_lark_cli_auth_service.py  test_larksync_cli.py  test_larksync_skill_helper.py  test_larksync_wsl_helper.py  test_launcher.py  test_log_reader.py  test_logging.py  test_macos_installer_smoke.py  test_main.py  test_markdown_blocks.py  test_media_uploader.py  test_path_sanitizer.py  test_paths.py  test_problem_service.py  test_problems_api.py  test_release.py  test_release_notes.py  (+37 more)
(+285 files in other folders)
